# vib-id-account-portal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  FINAL_DELIVERY_STATUS.md  FINAL_DELIVERY_STATUS_v1.1.0.md  FINAL_DELIVERY_STATUS_v1.2.0.md  FINAL_DELIVERY_STATUS_v1.2.2.md  FINAL_DELIVERY_STATUS_v1.3.0.md  FINAL_DELIVERY_STATUS_v1.3.1.md  FORENSIC_AUDIT_REPORT.md  FORENSIC_AUDIT_REPORT_v1.1.0.md  FORENSIC_AUDIT_REPORT_v1.2.0.md  HOTFIX_REPORT_v1.2.1_MOBILE_LOGOUT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_v1.1.0.md  IMPLEMENTATION_REPORT_v1.2.0.md  LICENSES-THIRD-PARTY.md  PATCH_REPORT.md  PATCH_REPORT_v1.0.1.md  PATCH_REPORT_v1.1.0.md  PATCH_REPORT_v1.2.2_OPERATIONS_UI_PATCH.md  PATCH_REPORT_v1.3.0_ACCOUNT_EXPERIENCE.md  PATCH_REPORT_v1.3.1_ACCOUNT_EXPERIENCE_HOTFIX.md  README.md  TEST_REPORT.md  TEST_REPORT_v1.1.0.md  TEST_REPORT_v1.2.0.md  TEST_REPORT_v1.2.2.md  TEST_REPORT_v1.3.0.md  TEST_REPORT_v1.3.1.md  VISUAL_AUDIT_REPORT.md  alembic.ini  compose.test.yaml  compose.yaml  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260630_0001_initial_schema.py  20260720_0002_account_experience.py
app/: __init__.py  config.py  dependencies.py  lifespan.py  logging_config.py  main.py  run.py  web.py
app/account_experience/: __init__.py  profile_media.py  routes.py  schemas.py  service.py
app/account_security/: __init__.py  routes.py  schemas.py  service.py
app/accounts/: __init__.py  repository.py  routes.py  schemas.py  service.py
app/activity/: __init__.py  repository.py  routes.py
app/auth/: backchannel_logout.py  keycloak_management.py  oidc.py  routes.py  sessions.py  token_validation.py
app/cli/: __init__.py  main.py
app/database/: base.py  locks.py  session.py
app/health/: routes.py
app/middleware/: body_limit.py  rate_limit.py  request_id.py  security_headers.py
app/preferences/: __init__.py  routes.py
docs/: ACCOUNT_EXPERIENCE_V1.3.0.md  ACCOUNT_EXPERIENCE_V1.3.1_HOTFIX.md  ACCOUNT_SECURITY_MODULE.md  ARCHITECTURE.md  BACKUP_RESTORE.md  COOLIFY_DEPLOYMENT.md  DATA_MODEL.md  INCIDENT_RESPONSE.md  KEYCLOAK_CLIENT_SETUP.md  OPERATIONS.md  OPERATIONS_MONITORING_INTERNAL.md  SECURITY.md  SERVICE_INTEGRATION.md  UI_DESIGN_SYSTEM.md
scripts/: check_release_integrity.py  check_templates.py  create_release.py  create_release.sh  generate_secrets.py  load_test.py  run_audit.sh  wait_for_db.py
tests/: conftest.py
(+55 files in other folders)
