[project]
name = "vib-id-account-portal"
version = "1.2.2"
description = "Vib ID central account portal for Vib Tools and connected services"
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "Vib Tools" }]
dependencies = [
  "alembic>=1.14",
  "asyncpg>=0.30",
  "authlib>=1.6",
  "cryptography>=44",
  "email-validator>=2.2",
  "fastapi>=0.115",
  "httpx>=0.28",
  "jinja2>=3.1",
  "phonenumbers>=9",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.8",
  "python-multipart>=0.0.20",
  "sqlalchemy[asyncio]>=2.0.38",
  "typer>=0.15",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21",
  "bandit[toml]>=1.8",
  "coverage[toml]>=7.6",
  "mypy>=1.15",
  "pip-audit>=2.8",
  "playwright>=1.51",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.11",
  "types-python-dateutil>=2.9",
]

[project.scripts]
vib-id = "app.cli.main:app"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".git", ".venv", ".pytest_cache", ".mypy_cache", ".ruff_cache", "__pycache__", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S", "A", "C4", "DTZ", "G", "PIE", "PTH", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S107", "S108"]
"alembic/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic/versions"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["authlib.*", "phonenumbers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=app --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires PostgreSQL or external services",
  "e2e: browser end-to-end test",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/cli/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
